some little changes

--- a/plugins/generatorsEditor/generatorsGenerator/templates/utils.template
+++ b/plugins/generatorsEditor/generatorsGenerator/templates/utils.template
@@ -27,6 +27,7 @@ QString const @@templateVariableName@@ = "@@templateFileName@@";
 @@converterGenerateBody@@
 @@replaceTemplateGenerateBody@@
 	}
+	mTemplateUtils["@@foreachMarkName@@"] = res_@@count@@;
 ==========
 @@oneReplaceTemplateGenerateBody@@
 QString res_one_@@count@@ = mTemplateUtils["@@elementMarkName@@"];
